* Now the Widget is showing the right information. * Adding layout for landscape for Video for phones, so we can rotate the screen. * Adding layout for tablest for video container.

--- a/app/src/main/res/layout/baking_widget.xml
+++ b/app/src/main/res/layout/baking_widget.xml
@@ -1,6 +1,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/root"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/widget_background"
@@ -49,6 +50,10 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@id/fl_divider"
+        android:layout_marginEnd="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginStart="8dp"
         android:divider="@color/colorDivider"
         android:dividerHeight="1dp" />
 
