--- a/app/src/main/res/layout-sw600dp/fragment_video.xml
+++ b/app/src/main/res/layout-sw600dp/fragment_video.xml
@@ -3,14 +3,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:padding="16dp"
+    android:padding="@dimen/video_root_padding"
     tools:context=".section.step.StepDetailFragment">
 
     <RelativeLayout
         android:id="@+id/video_container"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="60">
+        android:layout_height="@dimen/video_container_height"
+        android:layout_weight="@integer/video_container_weight">
 
         <com.google.android.exoplayer2.ui.SimpleExoPlayerView
             android:id="@+id/video"
@@ -50,8 +50,8 @@
             android:visibility="gone">
 
             <ImageView
-                android:layout_width="160dp"
-                android:layout_height="160dp"
+                android:layout_width="@dimen/video_not_found_icon_size"
+                android:layout_height="@dimen/video_not_found_icon_size"
                 android:contentDescription="@string/video_not_available"
                 android:src="@drawable/video_not_available" />
 
@@ -59,7 +59,7 @@
                 style="@style/VideoNotAvailableStyle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
+                android:layout_marginTop="@dimen/video_not_found_margin_text"
                 android:text="@string/video_not_available" />
 
         </LinearLayout>
@@ -68,8 +68,8 @@
 
     <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="40">
+        android:layout_height="@dimen/video_detail_container_height"
+        android:layout_weight="@integer/video_detail_container_weight">
 
         <TextView
             android:id="@+id/step_detail"
