--- a/app/src/main/res/layout/fragment_step_detail.xml
+++ b/app/src/main/res/layout/fragment_step_detail.xml
@@ -12,7 +12,7 @@
         android:layout_alignParentBottom="true"
         app:tabBackground="@drawable/page_indicator_selector"
         app:tabGravity="center"
-        app:tabIndicatorHeight="0dp" />
+        app:tabIndicatorHeight="@dimen/steps_tab_indicator" />
 
     <android.support.v4.view.ViewPager
         android:id="@+id/vp_steps"
