--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -7,13 +7,33 @@
     <dimen name="recipe_text_margin_horizontal">8dp</dimen>
     <dimen name="recipe_text_margin_vertical">4dp</dimen>
     <dimen name="recipe_padding">8dp</dimen>
+
+    <dimen name="step_root_padding">16dp</dimen>
     <dimen name="step_text_padding">16dp</dimen>
+    <dimen name="steps_fragment_width">0dp</dimen>
+    <dimen name="steps_tab_indicator">0dp</dimen>
 
-    <!--
-Refer to App Widget Documentation for margin information
-http://developer.android.com/guide/topics/appwidgets/index.html#CreatingLayout
-    -->
+    <dimen name="detail_fragment_container_margin">16dp</dimen>
+    <dimen name="detail_fragment_container_width">0dp</dimen>
+
+    <dimen name="video_root_padding">16dp</dimen>
+    <dimen name="video_container_height">0dp</dimen>
+    <dimen name="video_not_found_icon_size">160dp</dimen>
+    <dimen name="video_not_found_margin_text">8dp</dimen>
+    <dimen name="video_detail_container_height">0dp</dimen>
+
+    <dimen name="ingredient_root_padding">16dp</dimen>
+    <dimen name="ingredient_text_margin">8dp</dimen>
+    <dimen name="ingredient_measure_margin">8dp</dimen>
+
+    <!-- Widget dimensions -->
     <dimen name="widget_margin">8dp</dimen>
-
+    <dimen name="widget_header_padding">8dp</dimen>
+    <dimen name="widget_tv_recipe_margin_left">16dp</dimen>
+    <dimen name="widget_tv_recipe_margin_top">8dp</dimen>
+    <dimen name="widget_tv_ingredients_margin_left">16dp</dimen>
+    <dimen name="widget_tv_ingredients_margin_top">4dp</dimen>
+    <dimen name="widget_divider">1dp</dimen>
+    <dimen name="widget_lv_margin">8dp</dimen>
 
 </resources>
